# ck

./: .gitignore  AUTHORS  HACKING  INSTALL  INSTALL.real  MAINTAINERS  Makefile.am  Makefile.decl  NEWS  README  autoclean.sh  autogen.sh  configure.ac  contextkit.pro  contextprovider-1.0-uninstalled.pc  contextprovider-1.0.pc.in  gtk-doc.make  ltmain.sh.as-needed.patch  makedeb
context-provide/: Makefile.am  commandwatcher.cpp  context-provide.pro  propertyproxy.cpp
contextd/: .gitignore  Makefile.am  contextd.xml  hal_plugin.vala  lowmem_plugin.vala  main.vala  org.freedesktop.ContextKit.contextd.context  org.freedesktop.ContextKit.contextd.service.in  plugin.vala
contextd/customer-tests/: Makefile.am
contextd/demo/: demo.txt  runMe.py  tiny_client.py
contextd/doc/: doxy.cfg
contextd/src/: Makefile.am  boolsysfspooler.cpp  boolsysfspooler.h  contextd.cpp  haldeviceinterface.cpp  haldeviceinterface.h  halmanagerinterface.cpp  halmanagerinterface.h  halprovider.cpp  halprovider.h  logging.cpp  logging.h  loggingfeatures.h  lowmemprovider.cpp  lowmemprovider.h  provider.cpp  provider.h  sconnect.h
contextd/unit-tests/: Makefile.am
doc/: .gitignore  Makefile.am  context-arch.txt  context-cron.txt  context-intro.txt  context-providers.txt  context-talk.txt  context-types.txt  demos.txt  index.txt  myfilter.conf  protocol-suggestion.txt  use-cases.txt
doc/reference/: Makefile.am
fake-provider/: Makefile.am  README  com.nokia.FakeContextProvider.context  fake-provider.xml
libcontextprovider/: .gitignore  CProvider.vala  ContextProvider.vala  DBusInterface.vala  KeyUsageCounter.vala  Makefile.am  Makefile.fragment  Manager.vala  Providers.vala  Subscriber.vala  context_provider.c  context_provider.h  context_provider.vala  contextprovider-1.0-uninstalled.pc  contextprovider-1.0-uninstalled.pc.in  contextprovider-1.0.pc.in  contextprovider.c  contextprovider.h  cprovider.c  cprovider.h  cprovider.vala  dbus_interface.c  dbus_interface.h  dbus_interface.vala  group.vala  grouplist.vala  groups.vala  intset.c  intset.h  intset.vapi  intset_binding.vala  key_usage_counter.c  key_usage_counter.h  key_usage_counter.vala  libcontextprovider.pro  manager.c  manager.h  manager.vala  provider_interface.c  provider_interface.h  (+12 more)
libcontextprovider/context-provide/: .gitignore  Makefile.am  commandwatcher.cpp  commandwatcher.h  context-provide.1  context-provide.cpp  propertyproxy.cpp  propertyproxy.h
libcontextprovider/customer-tests/: Makefile.am  customer-tests.pro  env.sh  runTests.sh  tests.xml
libcontextprovider/doc/: .gitignore  Makefile.am  doc.pri  doxy.cfg
libcontextprovider/man/: Makefile.am  context-provide-v2.1  new-context-provide.1
libcontextprovider/src/: ContextProvider  Makefile.am  context.cpp  context.h  context_provider.h  contextc.cpp  contextc.h  contextgroup.cpp  contextgroup.h  contextprovider-1.0.pc.in  contextprovider5.pc.in  group.cpp  group.h  listeners.cpp  listeners.h  logging.cpp  logging.h  loggingfeatures.h  manager.cpp  manager.h  manageradaptor.cpp  manageradaptor.h  property.cpp  property.h  propertyadaptor.cpp  propertyadaptor.h  propertyprivate.cpp  propertyprivate.h  queuedinvoker.cpp  queuedinvoker.h  service.cpp  service.h  servicebackend.cpp  servicebackend.h  signalgrouper.cpp  signalgrouper.h  src.pro  subscriber.cpp  subscriber.h  subscriberadaptor.cpp  (+1 more)
libcontextprovider/test-cli/: Makefile.am  test-cli.cpp  test-cli.h
libcontextprovider/unit-tests/: Makefile.am  unit-tests.pro
libcontextsubscriber/: .gitignore  Makefile.am  autoclean.sh  autogen.sh  configure.ac  configure.old  contextsubscriber-1.0-uninstalled.pc.in  contextsubscriber-1.0.pc.in  libcontextsubscriber.pro  test.pri
libcontextsubscriber/accept-tests/: FT_contextSubscriber.py  Makefile.am  asynchronocity.py  commander_appearing.py  commander_disabled.py  commander_nonexistent.py  runTests.sh
libcontextsubscriber/am/: qt-check.am  qt-new.am  qt.am  tests.am
libcontextsubscriber/cli/: Makefile.am  cli.pro  commandwatcher.cpp  commandwatcher.h  context-cli.cpp  context-listen.cpp  context-listener.cpp  propertylistener.cpp  propertylistener.h
libcontextsubscriber/cls/: Makefile.am  cls.pro  context-ls.cpp
libcontextsubscriber/customer-tests/: Makefile.am  customer-tests.pro  env.sh  runTests.sh  tests.xml  waitforsilence
libcontextsubscriber/demo/: README  fast.context  slow.xml
libcontextsubscriber/doc/: Makefile.am  doxy.cfg
libcontextsubscriber/man/: Makefile.am  context-listen.1  context-listener.1  context-ls.1  context-print-info.1  test  update-context-providers.1  update-contextkit-providers.1  update-tool.1
libcontextsubscriber/multithreading-tests/: Makefile.am
libcontextsubscriber/plugins/: Makefile.am
libcontextsubscriber/propertymonitor/: Makefile.am  generate-tests-xml.sh  has_provider.py  has_value.py  tests.xml.begin  tests.xml.end  tests.xml.middle  tests.xsl
libcontextsubscriber/reg-cli/: .gitignore  Makefile.am  print-info.cpp
libcontextsubscriber/src/: Makefile.am  Manager.xml  Subscriber.xml  assoctree.cpp  assoctree.h  bluezinterface.cpp  bluezinterface.h  cdbreader.cpp  cdbreader.h  cdbwriter.cpp  cdbwriter.h  contextjson.h  contextkitplugin.cpp  contextkitplugin.h  contextproperty.cpp  contextproperty.h  contextproperty_priv.h  contextpropertyinfo.cpp  contextpropertyinfo.h  contextpropertymeta.cpp  contextpropertymeta.h  contextproviderinfo.h  contextregistry.cpp  contextregistry.h  contextregistryinfo.cpp  contextregistryinfo.h  contextsubscriber-1.0.pc.in  contextsubscriber5.pc.in  contexttypedefinitioninfo.cpp  contexttypedefinitioninfo.h  contexttypeinfo.cpp  contexttypeinfo.h  contexttyperegistryinfo.cpp  dbusnamelistener.cpp  (+51 more)
python/: ContextProvider.py  Makefile.am  README  complex.py  context-provide  context-provide.1  context-rlwrap  python.pro  simple.py
spec/: .gitignore  Context.owl  ContextKit.xml  Makefile.am  Manager.xml  Subscriber.xml  Subscription.xml  all.xml  context.xml  context.xsd  context2asciidoc.pl  contextkit.xml  core.context  core.types  gen_doc.sh  generic-types.xml  spec.pro
(+681 files in other folders)
