dist_man_MANS = context-provide.1

dist_bin_SCRIPTS = context-provide context-rlwrap

pkgpython_PYTHON = ContextKit/flexiprovider.py				\
                   ContextKit/ContextProvider.py			\
                   ContextKit/CTypesHelpers.py ContextKit/__init__.py   \
                   ContextKit/cltool.py

EXTRA_DIST = README simple.py complex.py
